# oci-coordinator

./: .dockerignore  .env.example  .gitignore  AGENT.md  CLAUDE.md  Dockerfile  Dockerfile.mcp  LICENSE  README.md  pyproject.toml  test_demo_plan_routing.py
.claude/: settings.json
.claude/agents/: slack-agent-architect.md
.claude/skills/planning-with-files/: SKILL.md  examples.md  reference.md
.github/workflows/: build-deploy.yaml
.serena/: project.yml
.serena/memories/: architecture_details.md  code_style.md  mcp_tools.md  project_overview.md  slack_silent_drops_and_oca_auth_patterns.md  suggested_commands.md  task_completion.md
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/tracks/enhancement_20251231/: plan.md
conductor/tracks/foundation_20251229/: metadata.json  plan.md  spec.md
config/: GEMINI-CONDUCTOR-CONFIG.md  mcp_servers.oke.yaml  mcp_servers.yaml
config/catalog/: capability_aliases.json  domain_prefixes.json  runtime_profiles.yaml  server_domains.json  tool_aliases.json  tool_tiers.yaml
data/: admin_todos.json
deploy/helm/oci-agent-stack/: Chart.yaml  values.yaml
deploy/helm/oci-agent-stack/templates/: _helpers.tpl  coordinator-deployment.yaml  coordinator-service.yaml  gateway-deployment.yaml  gateway-service.yaml  serviceaccount.yaml
deploy/oke/: README.md  coordinator-configmap.yaml  coordinator-deployment.yaml  coordinator-hpa.yaml  coordinator-pdb.yaml  coordinator-secret.example.yaml  coordinator-service.yaml  coordinator-serviceaccount.yaml  gateway-configmap.yaml  gateway-deployment.yaml  gateway-hpa.yaml  gateway-pdb.yaml  gateway-service.yaml  gateway-serviceaccount.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml
docs/: 01-PRODUCT-DEFINITION.md  AGENT_ARCHITECTURE_REVIEW.md  ARCHITECTURE.md  ARCHITECTURE_DESIGN.md  CHANGELOG_2025-01-10.md  CODE_REVIEW.md  DB_TROUBLESHOOTING_WORKFLOW.md  DEMO_PLAN.md  ENHANCEMENT_IMPLEMENTATION.md  ENHANCEMENT_PLAN.md  FEATURE_MAPPING.md  FEATURE_REVIEW_SUMMARY.md  GCP_EQUIVALENT_ARCHITECTURE.md  MCP_MANIFEST_SCHEMA.md  MCP_SERVER_COMPLIANCE.md  OCI_AGENT_REFERENCE.md  OKE_DEPLOYMENT.md  RUNBOOK.md  SELECTAI_DESIGN.md  SHOWOCI_INTEGRATION.md  SLACK_EVENT_SETUP.md  SLACK_WORKFLOW_AUDIT.md  TROUBLESHOOTING_WIKI.md  agents.md  gemini.md
prompts/: 00-COORDINATOR-AGENT.md  01-DB-TROUBLESHOOT-AGENT.md  02-LOG-ANALYTICS-AGENT.md  03-SECURITY-THREAT-AGENT.md  04-FINOPS-AGENT.md  05-INFRASTRUCTURE-AGENT.md
scripts/: cache_warmup.py  diagnose_slack.py  oca_auth.py  oca_login.py  oci_discovery.py  provision_selectai.py  restart.sh  start.sh  start_both.py  status.sh  stop.sh  test_e2e_workflow.py  test_extraction.py  test_mcp_tools.py  test_oca_recursive.py  test_results.json  validate_naming.py  verify_slack_tokens.py
scripts/sql/: selectai_provision.sql
src/: main.py  streamlit_chat.py
src/agents/: __init__.py  base.py  catalog.py  protocol.py  react_agent.py  skills.py
src/agents/coordinator/: __init__.py  graph.py  nodes.py  orchestrator.py  state.py  transparency.py  workflows.py
src/agents/core/: __init__.py  code_executor.py  deep_skills.py  model_tiers.py  skill_integration.py  sqlcl_executor.py
src/agents/database/: __init__.py  troubleshoot.py
src/agents/deep_skills/: __init__.py  db_troubleshoot.py  finops.py  infrastructure.py  log_analytics.py  security.py
src/agents/error_analysis/: __init__.py  agent.py  todo_manager.py
src/agents/finops/: __init__.py  agent.py  focus_integration.py
src/agents/infrastructure/: __init__.py  agent.py
src/agents/log_analytics/: __init__.py  agent.py
src/agents/security/: __init__.py  agent.py  sigma_integration.py
src/agents/selectai/: __init__.py  agent.py
src/agents/self_healing/: __init__.py  analyzer.py  corrector.py  mixin.py  retry.py  validator.py
src/agents/skills/: code_sandbox.py
src/agents/testing/: __init__.py  mocks.py  runner.py  suites.py
src/api/: __init__.py  main.py
src/cache/: __init__.py  oci_resource_cache.py
src/channels/: __init__.py  async_runtime.py  conversation.py  slack.py  slack_catalog.py  streamlit.py
src/evaluation/: __init__.py  dataset.py  judge.py  metrics.py  runner.py
src/evaluation/datasets/: gold_standard.yaml
src/formatting/: __init__.py  base.py  markdown.py  markdown_to_slack.py  parser.py  slack.py  teams.py  thinking.py
src/llm/: __init__.py  factory.py  health.py  models.py  oca.py  oca_callback_server.py  rate_limiter.py
src/llm/providers/: oca.py
src/mcp/: __init__.py  catalog.py  client.py  config.py  connection_manager.py  dynamic_manager.py  registry.py  validation.py
src/mcp/server/: auth.py  main.py
src/mcp/server/skills/: troubleshoot.py
src/mcp/server/tools/: compute.py  cost.py  database.py  discovery.py  identity.py  logan.py  network.py  observability.py  opsi.py  security.py  selectai.py
src/mcp/tools/: __init__.py  converter.py
src/memory/: __init__.py  atp_config.py  checkpointer.py  context.py  manager.py  planner.py
src/observability/: __init__.py  llm_tracing.py  metrics.py  oci_logging.py  tracing.py  visualizer.py
src/oci/: __init__.py  discovery.py  profile_manager.py  tenancy_manager.py
src/rag/: __init__.py  embeddings.py  loaders.py  retriever.py  vector_store.py
src/resilience/: __init__.py  bulkhead.py  deadletter.py  health.py
src/showoci/: __init__.py  cache_loader.py  parser.py  runner.py
src/skills/: troubleshoot_database.py
tests/: conftest.py  test_agent_catalog_runtime_profiles.py  test_agent_use_cases.py  test_agentic_flow.py  test_all_agents.py  test_api_server.py  test_db_troubleshoot.py  test_e2e_mcp_skills.py  test_env.py  test_evaluation.py  test_file_based_planner.py  test_llm_factory.py  test_llm_oca.py  test_markdown_to_slack.py  test_mcp_auth_modes.py  test_mcp_catalog.py  test_mcp_manifest.py  test_mcp_server.py  test_observability.py  test_oca_tracing.py  test_selectai_agent.py  test_tool_converter.py  test_visualizer.py
tests/integration/: test_atp_connection.py  test_mcp_cache_integration.py
